# ac

./: 15jun2016  2dic2016  README.md  truquitrucos
exac/: 11dic2014  11dic2015  7dic2016  insertsergio
exac/onemore/: 15juni2016yo  insert2
lorenas_work/: CMakeLists.txt  package.xml
lorenas_work/src/: follow_ball.cpp  nodo_def.cpp  nodo_hsv_tunner_2dmod.cpp  nodo_laser.cpp  nodo_rep.cpp  nodo_scan.cpp  nodo_vff.cpp
onemore/: 11dic2015yo  2dic2016yo
